--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,11 @@
 name: CI
 
 # Controls when the workflow will run
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - master
 
 jobs:
   deploy:
